opentelemetry/deploy/production/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pulse
  labels:
    app.kubernetes.io/name: pulse
    app.kubernetes.io/part-of: telemetry
